--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: spoonshare
 description: "Meals of Grace."
 publish_to: 'none'
-version: 1.2.0
+version: 1.3.0
 
 environment:
-  sdk: '>=3.2.4 <4.0.0'
+  sdk: '>=3.2.1 <4.0.0'
 
 dependencies:
   flutter:
@@ -16,6 +16,7 @@ dependencies:
   shared_preferences: ^2.2.2
   flutter_dotenv: ^5.1.0
   google_sign_in: ^6.2.1
+  persistent_bottom_nav_bar: ^5.0.2
   image_picker: ^1.0.7
   firebase_storage: ^11.6.0
   permission_handler: ^11.2.0
@@ -34,7 +35,14 @@ dependencies:
   change_app_package_name: ^1.1.0
   flutter_screenutil: ^5.9.0
   device_preview: 1.1.0
-
+  bloc: ^8.1.4
+  flutter_bloc: ^8.1.5
+  equatable: ^2.0.5
+  firebase_messaging: 14.7.9
+  flutter_local_notifications: 17.0.0
+  webview_flutter: ^4.7.0
+  share_plus: ^9.0.0
+  path_provider: ^2.1.3
 
 dev_dependencies:
   flutter_test:
