--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ publish_to: 'none'
 version: 1.3.0
 
 environment:
-  sdk: '>=3.2.1 <4.0.0'
+  sdk: '>=3.2.5 <4.0.0'
 
 dependencies:
   flutter:
@@ -41,7 +41,7 @@ dependencies:
   firebase_messaging: 14.7.9
   flutter_local_notifications: 17.0.0
   webview_flutter: ^4.7.0
-  share_plus: ^9.0.0
+  share_plus: 
   path_provider: ^2.1.3
 
 dev_dependencies:
