--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   webview_flutter: ^4.7.0
   share_plus: 
   path_provider: ^2.1.3
+  in_app_update: ^4.2.2
+  flutter_svg: ^2.0.9
 
 dev_dependencies:
   flutter_test:
