--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: spoonshare
 description: "Meals of Grace."
 publish_to: 'none'
-version: 1.3.0
+version: 1.5.0+3
 
 environment:
   sdk: '>=3.2.1 <4.0.0'
@@ -43,6 +43,8 @@ dependencies:
   webview_flutter: ^4.7.0
   share_plus: ^9.0.0
   path_provider: ^2.1.3
+  flutter_svg: ^2.0.9
+  in_app_update: ^4.2.2
 
 dev_dependencies:
   flutter_test:
@@ -55,6 +57,8 @@ flutter:
 
   assets:
    - assets/images/
+   - assets/icons/filled/
+   - assets/icons/outlined/
 
   fonts:
     - family: Lora
