--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.yourapp">
+    package="com.spoonsharemeal">
 
   <!-- Permissions -->
     <uses-permission android:name="android.permission.INTERNET" />
@@ -7,11 +7,14 @@
     <!-- Location permissions -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE " />
 
     <!-- Storage permissions -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="32" />
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
 
     <!-- Camera permissions -->
     <uses-permission android:name="android.permission.CAMERA" />
@@ -20,7 +23,7 @@
 
     <!-- Application -->
     <application
-        android:label="spoonsharemeals"
+        android:label="SpoonShare"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
 
