--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   device_info_plus: ^9.1.1
   url_launcher: ^6.2.3
-  intl: ^0.18.1
+  intl: 0.19.0
   google_maps_flutter: ^2.5.3
   location: ^5.0.3
   google_maps_webservice: ^0.0.20-nullsafety.5
@@ -45,6 +45,9 @@ dependencies:
   path_provider: ^2.1.3
   flutter_svg: ^2.0.9
   in_app_update: ^4.2.2
+  flutter_localizations:
+    sdk: flutter
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
@@ -59,6 +62,10 @@ flutter:
    - assets/images/
    - assets/icons/filled/
    - assets/icons/outlined/
+   - assets/lang/en.json
+   - assets/lang/mr.json
+   - assets/lang/hi.json
+   - assets/lang/ka.json
 
   fonts:
     - family: Lora
